@@ -1,6 +1,8 @@
 package ch.elexis.connect.afinion.packages;
 
 import java.util.Calendar;
+import java.util.GregorianCalendar;
+import java.util.TimeZone;
 
 import ch.rgw.tools.TimeTool;
 
@@ -9,11 +11,18 @@ public class HeaderPart extends AbstractPart {
 	private int runNr;
 	private String lotNr;
 	private String id;
-	private TimeTool date;
+	private Calendar cal;
 
 	public HeaderPart(final byte[] bytes) {
 		parse(bytes);
 	}
+	
+	public static Calendar getUTCBaseCalendar() {
+        Calendar cal0_utc = new GregorianCalendar(TimeZone.getTimeZone("UTC"));
+        cal0_utc.set(1970, 0, 1, 0, 0, 0);
+        cal0_utc.set(Calendar.MILLISECOND, 0);
+        return cal0_utc;
+    }
 	
 	public void parse(final byte[] bytes) {
 		recordNum = getInteger(bytes, 0);
@@ -21,9 +30,11 @@ public class HeaderPart extends AbstractPart {
 		lotNr = getString(bytes, 25, 17);
 		id = getString(bytes, 42, 17);
 		
-		long dateSeconds = getInteger(bytes, 60); //Seconds since 1.1.1970 00:00 local time
-		
-		date = new TimeTool(dateSeconds * 1000);
+		int dateSeconds = getInteger(bytes, 60); //Seconds since 1.1.1970 00:00 UTC
+		cal = new GregorianCalendar(TimeZone.getTimeZone("UTC"));
+		cal.set(1999, 0, 1, 0, 0, 0);
+		cal.set(Calendar.SECOND, dateSeconds);
+		cal.getTime();
 	}
 
 	@Override
@@ -46,35 +57,46 @@ public class HeaderPart extends AbstractPart {
 	public String getId() {
 		return id;
 	}
+	
+	public Calendar getCalendar() {
+		return cal;
+	}
 
 	public TimeTool getDate() {
-		return date;
+		return new TimeTool(getCalendar().getTimeInMillis());
 	}
 	
-	private String toDate(TimeTool tt) {
-		int day = tt.get(Calendar.DAY_OF_MONTH);
-		String dayStr = day > 9? "" + day: "0" + day;
-		int month = tt.get(Calendar.MONTH) + 1;
-		String monthStr = month > 9? "" + month: "0" + month;
-		String yearStr = new Integer(tt.get(Calendar.YEAR)).toString();
-		
-		return dayStr + "." + monthStr + "." + yearStr;
-	}
+	private static String toDateString(Calendar cal) {
+        int date = cal.get(Calendar.DATE);
+        int month = cal.get(Calendar.MONTH) + 1;
+        int year = cal.get(Calendar.YEAR);
+
+        String dateStr = (date < 10 ? "0" : "") + Integer.valueOf(date).toString();
+        String monthStr = (month < 10 ? "0" : "") + Integer.valueOf(month).toString();
+        String yearStr = Integer.valueOf(year).toString();
+
+        return dateStr + "." + monthStr + "." + yearStr + " ("
+                + cal.getTimeZone().getID() + ")";
+    }
 	
-	private String toTime(TimeTool tt) {
-		int hour = tt.get(Calendar.HOUR_OF_DAY);
-		String hourStr = hour > 9? "" + hour: "0" + hour;
-		int minute = tt.get(Calendar.MINUTE);
-		String minStr = minute > 9? "" + minute: "0" + minute;
-		
-		return hourStr + ":" + minStr;
-	}
+	private static String toTimeString(Calendar cal) {
+        int hour = cal.get(Calendar.HOUR_OF_DAY);
+        int minutes = cal.get(Calendar.MINUTE);
+        int seconds = cal.get(Calendar.SECOND);
+
+        String hourStr = (hour < 10 ? "0" : "") + Integer.valueOf(hour).toString();
+        String minuteStr = (minutes < 10 ? "0" : "") + Integer.valueOf(minutes).toString();
+        String secondStr = (seconds < 10 ? "0" : "") + Integer.valueOf(seconds).toString();
+
+        return hourStr + ":" + minuteStr + ":" + secondStr + " ("
+                + cal.getTimeZone().getID() + ")";
+    }
 	
 	public String toString() {
 		String str = "";
 		str += "Record: " + recordNum + "\n";
-		str += "Date: " + toDate(date) + "\n";
-		str += "Time: " + toTime(date) + "\n";
+		str += "Date: " + toDateString(getCalendar()) + "\n";
+		str += "Time: " + toTimeString(getCalendar()) + "\n";
 		str += "Run#: " + runNr + "\n";
 		str += "ID: " + id + "\n";
 		str += "Lot#: " + lotNr + "\n";
